src/objects/Office_Location__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Office_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Main_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Office_Locations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rootstock_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rootstock Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Office Locations</relationshipLabel>
        <relationshipName>Office_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Alert_Email__c</fullName>
        <label>Sales Alert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Office_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Office Locations</relationshipLabel>
        <relationshipName>Office_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Coverage__c</fullName>
        <description>Install States Covered by Astrum Office</description>
        <inlineHelpText>Install States Covered by Astrum Office</inlineHelpText>
        <label>State Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Two-letter state code</description>
        <inlineHelpText>Two-letter state code</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Office_Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Office Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Director_of_Operations__c</columns>
        <columns>Regional_Operations_Manager__c</columns>
        <columns>Sales_Coordinator__c</columns>
        <columns>Survey_Scheduler__c</columns>
        <columns>Sales_Alert_Email__c</columns>
        <columns>State_Coverage__c</columns>
        <columns>Rootstock_Division__c</columns>
        <columns>Location__Latitude__s</columns>
        <columns>Location__Longitude__s</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Office Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Site_Div_should_match_RSTK_Div</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  NOT( ISBLANK(Site__r.rstk__sysite_div__c) )  ,
  NOT( ISBLANK( Rootstock_Division__c )),
  Site__r.rstk__sysite_div__c &lt;&gt; Rootstock_Division__c
)</errorConditionFormula>
        <errorMessage>Site Division should be same as Office Location Rootstock Division</errorMessage>
    </validationRules>
</CustomObject>